--- a/GameEditor/Base.lproj/MainMenu.xib
+++ b/GameEditor/Base.lproj/MainMenu.xib
@@ -143,13 +143,13 @@
                                                             <subviews>
                                                                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="MdD-hT-1Ht">
                                                                     <rect key="frame" x="-2" y="2" width="86" height="14"/>
-                                                                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="property" id="T5M-xp-jgp">
+                                                                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="property name" id="T5M-xp-jgp">
                                                                         <font key="font" metaFont="smallSystem"/>
                                                                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                                                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                                     </textFieldCell>
                                                                     <connections>
-                                                                        <binding destination="VdE-35-N2m" name="value" keyPath="objectValue.key" id="fVz-L4-apX"/>
+                                                                        <binding destination="VdE-35-N2m" name="value" keyPath="objectValue.propertyName" id="YX7-Uo-Ix8"/>
                                                                     </connections>
                                                                 </textField>
                                                             </subviews>
@@ -160,9 +160,6 @@
                                                             </constraints>
                                                         </tableCellView>
                                                     </prototypeCellViews>
-                                                    <connections>
-                                                        <binding destination="MHP-mB-ED2" name="value" keyPath="arrangedObjects.key" id="bH3-cB-fbF"/>
-                                                    </connections>
                                                 </tableColumn>
                                                 <tableColumn identifier="value" width="119" minWidth="40" maxWidth="1000" id="fSe-oH-awW">
                                                     <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="center" title="Value">
@@ -189,12 +186,8 @@
                                                                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                                     </textFieldCell>
                                                                     <connections>
-                                                                        <binding destination="2Ss-NZ-lOU" name="editable" keyPath="objectValue.editable" id="5mY-zg-VSe"/>
-                                                                        <binding destination="2Ss-NZ-lOU" name="value" keyPath="objectValue.propertyValue" id="L8M-gP-tkC">
-                                                                            <dictionary key="options">
-                                                                                <bool key="NSConditionallySetsEditable" value="YES"/>
-                                                                            </dictionary>
-                                                                        </binding>
+                                                                        <binding destination="2Ss-NZ-lOU" name="editable" keyPath="objectValue.editable" id="58c-am-Cia"/>
+                                                                        <binding destination="2Ss-NZ-lOU" name="value" keyPath="objectValue.propertyValue" id="2H3-jX-fw3"/>
                                                                     </connections>
                                                                 </textField>
                                                             </subviews>
@@ -207,27 +200,6 @@
                                                                 <outlet property="textField" destination="tOs-8Z-T1g" id="zp0-xC-noA"/>
                                                             </connections>
                                                         </tableCellView>
-                                                        <tableCellView identifier="bool" id="52C-rc-ywy">
-                                                            <rect key="frame" x="86" y="20" width="119" height="17"/>
-                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                            <subviews>
-                                                                <button translatesAutoresizingMaskIntoConstraints="NO" id="mOv-OH-5Kf">
-                                                                    <rect key="frame" x="-3" y="0.0" width="124" height="18"/>
-                                                                    <buttonCell key="cell" type="check" bezelStyle="regularSquare" imagePosition="left" alignment="left" controlSize="small" state="on" inset="2" id="wfP-uQ-u0G">
-                                                                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                                                                        <font key="font" metaFont="smallSystem"/>
-                                                                    </buttonCell>
-                                                                    <connections>
-                                                                        <binding destination="52C-rc-ywy" name="value" keyPath="objectValue.propertyValue" id="TVM-cM-Cwx"/>
-                                                                    </connections>
-                                                                </button>
-                                                            </subviews>
-                                                            <constraints>
-                                                                <constraint firstAttribute="trailing" secondItem="mOv-OH-5Kf" secondAttribute="trailing" id="bs9-ON-uGA"/>
-                                                                <constraint firstItem="mOv-OH-5Kf" firstAttribute="leading" secondItem="52C-rc-ywy" secondAttribute="leading" id="fgl-lE-HN9"/>
-                                                                <constraint firstAttribute="centerY" secondItem="mOv-OH-5Kf" secondAttribute="centerY" id="wN5-bQ-2MY"/>
-                                                            </constraints>
-                                                        </tableCellView>
                                                         <tableCellView identifier="degrees" id="ykA-kB-Fwq">
                                                             <rect key="frame" x="86" y="39" width="119" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -236,7 +208,7 @@
                                                                     <rect key="frame" x="-2" y="1" width="13" height="15"/>
                                                                     <stepperCell key="cell" controlSize="mini" continuous="YES" alignment="left" minValue="-360" maxValue="360" id="InT-SD-zPt"/>
                                                                     <connections>
-                                                                        <binding destination="ykA-kB-Fwq" name="value" keyPath="objectValue.propertyValue" id="hnt-eB-IHT"/>
+                                                                        <binding destination="ykA-kB-Fwq" name="value" keyPath="objectValue.propertyValue" id="Eha-Y8-p2c"/>
                                                                     </connections>
                                                                 </stepper>
                                                                 <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="fV5-EB-vtf">
@@ -254,8 +226,7 @@
                                                                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                                     </textFieldCell>
                                                                     <connections>
-                                                                        <binding destination="ykA-kB-Fwq" name="editable" keyPath="objectValue.editable" id="bwo-nE-Nya"/>
-                                                                        <binding destination="ykA-kB-Fwq" name="value" keyPath="objectValue.propertyValue" id="pBx-Vr-zsC"/>
+                                                                        <binding destination="ykA-kB-Fwq" name="value" keyPath="objectValue.propertyValue" id="R09-b9-38b"/>
                                                                     </connections>
                                                                 </textField>
                                                             </subviews>
@@ -267,14 +238,32 @@
                                                                 <constraint firstItem="an0-xg-ycP" firstAttribute="trailing" secondItem="fV5-EB-vtf" secondAttribute="leading" id="p5O-gC-lFo"/>
                                                             </constraints>
                                                         </tableCellView>
+                                                        <tableCellView identifier="bool" id="52C-rc-ywy">
+                                                            <rect key="frame" x="86" y="20" width="119" height="17"/>
+                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                            <subviews>
+                                                                <button translatesAutoresizingMaskIntoConstraints="NO" id="mOv-OH-5Kf">
+                                                                    <rect key="frame" x="-3" y="0.0" width="124" height="18"/>
+                                                                    <buttonCell key="cell" type="check" bezelStyle="regularSquare" imagePosition="left" alignment="left" controlSize="small" state="on" inset="2" id="wfP-uQ-u0G">
+                                                                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                                                                        <font key="font" metaFont="smallSystem"/>
+                                                                    </buttonCell>
+                                                                    <connections>
+                                                                        <binding destination="52C-rc-ywy" name="value" keyPath="objectValue.propertyValue" id="pxm-fR-xBz"/>
+                                                                    </connections>
+                                                                </button>
+                                                            </subviews>
+                                                            <constraints>
+                                                                <constraint firstAttribute="trailing" secondItem="mOv-OH-5Kf" secondAttribute="trailing" id="bs9-ON-uGA"/>
+                                                                <constraint firstItem="mOv-OH-5Kf" firstAttribute="leading" secondItem="52C-rc-ywy" secondAttribute="leading" id="fgl-lE-HN9"/>
+                                                                <constraint firstAttribute="centerY" secondItem="mOv-OH-5Kf" secondAttribute="centerY" id="wN5-bQ-2MY"/>
+                                                            </constraints>
+                                                        </tableCellView>
                                                     </prototypeCellViews>
-                                                    <connections>
-                                                        <binding destination="MHP-mB-ED2" name="editable" keyPath="arrangedObjects.editable" id="RG3-iw-ePb"/>
-                                                        <binding destination="MHP-mB-ED2" name="value" keyPath="arrangedObjects.propertyValue" id="6bK-1K-kxS"/>
-                                                    </connections>
                                                 </tableColumn>
                                             </tableColumns>
                                             <connections>
+                                                <binding destination="MHP-mB-ED2" name="content" keyPath="arrangedObjects" id="hjN-vv-GUd"/>
                                                 <outlet property="delegate" destination="494" id="k2L-wd-nMv"/>
                                             </connections>
                                         </tableView>
